# freesdp

./: AUTHORS  ChangeLog  FreeSDP.sln  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  freesdp.lsm.make  freesdp.lsm.make.in  freesdp.spec  freesdp.spec.in  reconfig
MSVS/VS2013/: FreeSDP.sln
MSVS/VS2013/formatdemo/: formatdemo.vcxproj  formatdemo.vcxproj.filters
MSVS/VS2013/libFreeSDP/: config.h  libFreeSDP.def  libFreeSDP.vcxproj  libFreeSDP.vcxproj.filters
MSVS/VS2013/modifydemo/: modifydemo.vcxproj  modifydemo.vcxproj.filters
MSVS/VS2013/parsedemo/: parsedemo.vcxproj  parsedemo.vcxproj.filters
config/: Makefile.am  Makefile.in
demo/: 1.sdp  Makefile.am  Makefile.in  README  formatdemo.c  modifydemo.c  parsedemo.c
doc/: Makefile.am  Makefile.in  freesdp.info  freesdp.texi
doc/refman/: Doxyfile
doc/refman/html/: annotated.html  classes.html  common_8c-source.html  common_8c.html  common_8h-source.html  common_8h.html  config_8h-source.html  config_8h.html  errorlist_8c-source.html  errorlist_8c.html  examples.html  files.html  formatdemo_8c-example.html  formatter_8c-source.html  formatter_8c.html  formatter_8h-source.html  formatter_8h.html  formatterpriv_8h-source.html  formatterpriv_8h.html  freesdp_8h-source.html  freesdp_8h.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x65.html  globals_0x66.html  globals_0x68.html  globals_0x6d.html  globals_0x6e.html  globals_0x6f.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x76.html  globals_defs.html  globals_enum.html  (+26 more)
libFreeSDP/: libFreeSDP.vcxproj  libFreeSDP.vcxproj.filters
m4/: Makefile.in
src/: Makefile.am  Makefile.in  common.c  errorlist.c  formatter.c  formatterpriv.h  parser.c  parserpriv.h  priv.h
src/freesdp/: common.h  formatter.h  freesdp.h  parser.h
tests/: Makefile.am  Makefile.in  README  rfc2sdps  torture.c
